--- a/index.html
+++ b/index.html
@@ -1,1 +1,47 @@
-<h1>Hello!</h1>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+
+	<title>My blog</title>
+	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700|Muli|Playfair+Display&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="blogassignment.css">
+
+</head>
+
+<body>
+
+	<h3 class = "date">|November 23 2019|</h3>
+
+	<h1 class = "title">This is my first article</h1>
+
+	<p class="first">
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</p>
+
+	<p>
+		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+	</p>
+
+	<hr>
+
+	<h3 class = "date"> |December 11 2019|</h3>
+
+	<h1 class="title"> This is another article</h1>
+
+	<p class = "first">
+		It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+	</p>
+
+	<p>
+		Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
+	</p>
+
+</body>
+
+
+
+
+
+</html>
