--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>My blog</title>
 	<link href="https://fonts.googleapis.com/css?family=Chakra+Petch:400,700|Muli|Playfair+Display&display=swap" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/blogassignment.css">
+	<link rel="stylesheet" type="text/css" href="css/blog.css">
 
 </head>
 
