--- a/index.html
+++ b/index.html
@@ -12,26 +12,23 @@
 
 <body>
 
-	<h3 class = "date">|November 23 2019|</h3>
+	<h3 class = "date">|January 28 2021|</h3>
 
-	<h1 class = "title">This is my first article</h1>
+	<h1 class = "title">And so it begins..</h1>
 
 	<p class="first">
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</p>
-
-	<p>
-		Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+		This is our first blog entry for CA326. We have secured a 3rd year project supervisor and have decided on a project idea. An online shift work scheduler that is based on our own experiences as shift workers. Donal has been tremendously helpful thus far and we hope he continues to be in the future. 
+		
 	</p>
 
 	<hr>
 
 	<h3 class = "date"> |December 11 2019|</h3>
 
-	<h1 class="title"> This is another article</h1>
+	<h1 class="title"> And so it begins</h1>
 
 	<p class = "first">
-		It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
+		This is our first blog entry for our CA326 Third year project. As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users.
 	</p>
 
 	<p>
