--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
 	<h3 class = "date"> |December 11 2019|</h3>
 
-	<h1 class="title"> And so it begins</h1>
+	<h1 class="title"> Going well</h1>
 
 	<p class = "first">
-		This is our first blog entry for our CA326 Third year project. As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users.
+		Sadly have not been able to update these blogs as the project took a backfoot due to exams and whatnot. But now we are full steam ahead! As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users. We began today by breaking down our UI into the various react components. We then broke down the prelimanary work breakdown. We decided one person research our backend approach and the other research the front end and react. This was a nice intorudction and let us hit the ground running.
 	</p>
 
 	<p>
