--- a/index.html
+++ b/index.html
@@ -12,27 +12,23 @@
 
 <body>
 
-	<h3 class = "date">|January 28 2021|</h3>
+	<h3 class = "date">|December 21 2020</h3>
 
 	<h1 class = "title">And so it begins..</h1>
 
 	<p class="first">
-		This is our first blog entry for CA326. We have secured a 3rd year project supervisor and have decided on a project idea. An online shift work scheduler that is based on our own experiences as shift workers. Donal has been tremendously helpful thus far and we hope he continues to be in the future. 
+		This is our first blog entry for CA326. We have secured a 3rd year project supervisor and have decided on a project idea. An online shift work scheduler that is based on our own experiences as shift workers. Donal has been tremendously helpful thus far and we hope he continues to be in the future. It is hard to update these as we are up to our eyes in projects but we are doing well so far.
 		
 	</p>
 
 	<hr>
 
-	<h3 class = "date"> |December 11 2019|</h3>
+	<h3 class = "date"> |January 18 2021|</h3>
 
 	<h1 class="title"> Going well</h1>
 
 	<p class = "first">
 		Sadly have not been able to update these blogs as the project took a backfoot due to exams and whatnot. But now we are full steam ahead! As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users. We began today by breaking down our UI into the various react components. We then broke down the prelimanary work breakdown. We decided one person research our backend approach and the other research the front end and react. This was a nice intorudction and let us hit the ground running.
-	</p>
-
-	<p>
-		Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.
 	</p>
 
 </body>
