--- a/index.html
+++ b/index.html
@@ -28,8 +28,19 @@
 	<h1 class="title"> Going well</h1>
 
 	<p class = "first">
-		Sadly have not been able to update these blogs as the project took a backfoot due to exams and whatnot. But now we are full steam ahead! As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users. We began today by breaking down our UI into the various react components. We then broke down the prelimanary work breakdown. We decided one person research our backend approach and the other research the front end and react. This was a nice intorudction and let us hit the ground running.
+		Sadly have not been able to update these blogs as the project took a backfoot due to exams and whatnot. But now we are full steam ahead! As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users. We began today by breaking down our UI into the various react components. We then broke down the prelimanary work breakdown. We decided one person research our backend approach and the other research the front end and react. This was a nice introdction and let us hit the ground running.
 	</p>
+	
+	<hr>
+	
+	<h3 class = "date"> |January 19 2021|</h3>
+
+	<h1 class="title">Research every Day</h1>
+	
+	<p class = "first">
+		We delved headfirst into research today. We split our workload in two, frontend and backend. Conor spent the day revising course notes on databases, and then pushed to find out more about SQL and NoSQL. He discovered the difference between them and came to the conclusion that a MongoDB database would perfectly suit our needs. I on the other hand learned more about react and how to dynamically change the webpage based on what our user did. So all in all...Things are going nicely.
+	</p>
+	
 
 </body>
 
