--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 
 <body>
 
-	<h3 class = "date">|December 21 2020</h3>
+	<h3 class = "date">|December 21 2020| Niall </h3>
 
 	<h1 class = "title">And so it begins..</h1>
 
 	<p class="first">
-		This is our first blog entry for CA326. We have secured a 3rd year project supervisor and have decided on a project idea. An online shift work scheduler that is based on our own experiences as shift workers. Donal has been tremendously helpful thus far and we hope he continues to be in the future. It is hard to update these as we are up to our eyes in projects but we are doing well so far.
+		This is our first blog entry for CA326. We have secured a 3rd year project supervisor and have decided on a project idea. An online shift work scheduler that is based on our own experiences as shift workers. Donal has been tremendously helpful thus far and we hope he continues to be in the future. It is hard to update these as we are up to our eyes in projects but we are doing well so far. 
 		
 	</p>
 
 	<hr>
 
-	<h3 class = "date"> |January 18 2021|</h3>
+	<h3 class = "date"> |January 18 2021| Niall </h3>
 
 	<h1 class="title"> Going well</h1>
 
@@ -33,7 +33,7 @@
 	
 	<hr>
 	
-	<h3 class = "date"> |January 19 2021|</h3>
+	<h3 class = "date"> |January 19 2021| Niall </h3>
 
 	<h1 class="title">Research every Day</h1>
 	
