--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
 		We delved headfirst into research today. We split our workload in two, frontend and backend. Conor spent the day revising course notes on databases, and then pushed to find out more about SQL and NoSQL. He discovered the difference between them and came to the conclusion that a MongoDB database would perfectly suit our needs. I on the other hand learned more about react and how to dynamically change the webpage based on what our user did. So all in all...Things are going nicely.
 	</p>
 	
+	<hr>
+
+	<h3 class = "date"> |January 21 2021| Conor </h3>
+
+	<h1 class = "title"> MERN Discovery </h1>
+
+	<p class = "first">
+		Since the last post I (Conor) have completed half of MongoDB University's Intro to MongoDB course. This how now given me a very good foundational understanding of how MongoDB databases are created and structured. We have also discovered the modern and seemingly popular MERN structure for full-stack web development which is a structure we will most likely be using for this project. Each letter of MERN stands for a different language / technology. M for MongoDB, E for Express js, R for React js and N for Node js. React will obviously handle our front end, MongoDB will be our database and a combination of Node js and Express js will handle our backend. 
+	</p>
 
 </body>
 
