--- a/index.html
+++ b/index.html
@@ -50,6 +50,18 @@
 	<p class = "first">
 		Since the last post I (Conor) have completed half of MongoDB University's Intro to MongoDB course. This how now given me a very good foundational understanding of how MongoDB databases are created and structured. We have also discovered the modern and seemingly popular MERN structure for full-stack web development which is a structure we will most likely be using for this project. Each letter of MERN stands for a different language / technology. M for MongoDB, E for Express js, R for React js and N for Node js. React will obviously handle our front end, MongoDB will be our database and a combination of Node js and Express js will handle our backend. 
 	</p>
+	
+	
+	<hr>
+
+	<h3 class = "date"> |January 27 2021| Niall </h3>
+
+	<h1 class = "title"> Strides Taken </h1>
+
+	<p class = "first">
+		Progess is being made! Niall has begun to work on our frontend and its accompying logic. Material ui (a javascript framework) is being utilised to create a cohesive user experience. A login page has been created and also the beginnings of our standard homepage. Our next big step is to add functionality to our homepage to allow users to create, edit and delete events as they see fit. It is really motivational to see progress within our project and this will hopefully allow us to continue at this pace.
+	</p>
+
 
 </body>
 
