--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 	<h3 class = "date"> |January 18 2021| Niall </h3>
 
-	<h1 class="title"> Going well</h1>
+	<h1 class="title"> I Guess We Should Start? </h1>
 
 	<p class = "first">
 		Sadly have not been able to update these blogs as the project took a backfoot due to exams and whatnot. But now we are full steam ahead! As We have completed our functional spec this is our first steps to create, what we hope will be a worthwhile service to our users. We began today by breaking down our UI into the various react components. We then broke down the prelimanary work breakdown. We decided one person research our backend approach and the other research the front end and react. This was a nice introdction and let us hit the ground running.
@@ -59,7 +59,7 @@
 	<h1 class = "title"> Strides Taken </h1>
 
 	<p class = "first">
-		Progess is being made! Niall has begun to work on our frontend and its accompying logic. Material ui (a javascript framework) is being utilised to create a cohesive user experience. A login page has been created and also the beginnings of our standard homepage. Our next big step is to add functionality to our homepage to allow users to create, edit and delete events as they see fit. It is really motivational to see progress within our project and this will hopefully allow us to continue at this pace.
+		Progess is being made! Niall has begun to work on our frontend and its accompanying logic. Material-ui (a javascript framework) is being utilised to create a cohesive user experience. A login page has been created and also the beginnings of our standard homepage. Our next big step is to add functionality to our homepage to allow users to create, edit and delete events as they see fit. It is really motivational to see progress within our project and this will hopefully allow us to continue at this pace.
 	</p>
 
 
