--- a/index.html
+++ b/index.html
@@ -61,6 +61,16 @@
 	<p class = "first">
 		Progess is being made! Niall has begun to work on our frontend and its accompanying logic. Material-ui (a javascript framework) is being utilised to create a cohesive user experience. A login page has been created and also the beginnings of our standard homepage. Our next big step is to add functionality to our homepage to allow users to create, edit and delete events as they see fit. It is really motivational to see progress within our project and this will hopefully allow us to continue at this pace.
 	</p>
+	
+	<h3 class = "date"> |Febuary 04 2021| Niall </h3>
+
+	<h1 class = "title"> We are Rolling Now </h1>
+
+	<p class = "first">
+		Our app is really coming along now. The structural and stylistic elements of our app are fundementally done along with all the pages needed. On the backend, Conor has created the required schemas to create and maintain our accounts. The next step is to tie these two ends together with our API to handle the requests. Exciting times indeed.
+	</p>
+	
+	
 
 
 </body>
