--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 	<h1 class = "title"> We are Rolling Now </h1>
 
 	<p class = "first">
-		Our app is really coming along now. The structural and stylistic elements of our app are fundementally done along with all the pages needed. On the backend, Conor has created the required schemas to create and maintain our accounts. The next step is to tie these two ends together with our API to handle the requests. Exciting times indeed.
+		Our app is really coming along now. The structural and stylistic elements of our app are fundementally done along with all the pages needed. I have created a login and sign in page, our main calander page and employee page to allow for creation and listing of employees. On the backend, Conor has created the required schemas to create and maintain our accounts. The next step is to tie these two ends together with our API to handle the requests. I am very happy with our progress thus far and look forward to continuing these efforts. Exciting times indeed.
 	</p>
 	
 	
