added blog for 15th of feb

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 		Progess is being made! Niall has begun to work on our frontend and its accompanying logic. Material-ui (a javascript framework) is being utilised to create a cohesive user experience. A login page has been created and also the beginnings of our standard homepage. Our next big step is to add functionality to our homepage to allow users to create, edit and delete events as they see fit. It is really motivational to see progress within our project and this will hopefully allow us to continue at this pace.
 	</p>
 	
+	<hr>
 	<h3 class = "date"> |Febuary 04 2021| Niall </h3>
 
 	<h1 class = "title"> We are Rolling Now </h1>
@@ -69,6 +70,16 @@
 	<p class = "first">
 		Our app is really coming along now. The structural and stylistic elements of our app are fundementally done along with all the pages needed. I have created a login and sign in page, our main calander page and employee page to allow for creation and listing of employees. On the backend, Conor has created the required schemas to create and maintain our accounts. The next step is to tie these two ends together with our API to handle the requests. I am very happy with our progress thus far and look forward to continuing these efforts. Exciting times indeed.
 	</p>
+	<hr>
+	
+	<h3 class = "date"> |Febuary 15 2021| Niall </h3>
+	
+	<h1 class = "title"> Are we App Developers? </h1>
+
+	<p class = "first">
+		Sorry this one was a bit late, a long weekend! We are making great progress. I have swapped the local storage solutions i was using as a stop gap out for actual API calls with axios to our backend that conor created. We now have the capabilities to sign up new users, and for them to create and display employees within our react app. It is very rewarding to see our work paying off. Our next big challenges are to make sure people can log in properly, and also wrangle our calander component with real data. 
+	</p>
+	<hr>
 	
 	
 
