--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
 		Sorry this one was a bit late, a long weekend! We are making great progress. I have swapped the local storage solutions i was using as a stop gap out for actual API calls with axios to our backend that conor created. We now have the capabilities to sign up new users, and for them to create and display employees within our react app. It is very rewarding to see our work paying off. Our next big challenges are to make sure people can log in properly, and also wrangle our calander component with real data. 
 	</p>
 	<hr>
+	<h3 class = "date"> |Febuary 17 2021| Niall </h3>
+	
+	<h1 class = "title"> Tiny update </h1>
+
+	<p class = "first">
+		 Just a small update. Conor is working hard on wrangling tokens into our backend, and i have made a quick solution for logins, where if there is no account associated with an email and password, it will fail and a popup will inform the user of this. If there is an account associated, they will be redirected to the home page. 
+	</p>
+	<hr>
 	
 	
 
