--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 	<hr>
 	<h3 class = "date"> |Febuary 17 2021| Niall </h3>
 	
-	<h1 class = "title"> Tiny update </h1>
+	<h1 class = "title"> Teeny Tiny Update </h1>
 
 	<p class = "first">
 		 Just a small update. Conor is working hard on wrangling tokens into our backend, and i have made a quick solution for logins, where if there is no account associated with an email and password, it will fail and a popup will inform the user of this. If there is an account associated, they will be redirected to the home page. 
