--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 		 Just a small update. Conor is working hard on wrangling tokens into our backend, and i have made a quick solution for logins, where if there is no account associated with an email and password, it will fail and a popup will inform the user of this. If there is an account associated, they will be redirected to the home page. 
 	</p>
 	<hr>
+
+	<h3 class = "date"> |February 20 2021| Conor </h3>
+
+	<h1 class = "title"> Full Steam Ahead </h1>
+
+	<p class = "first">
+		With the communications module finishing yesterday, we now properly have the ability to put the foot down and get this project finished. Things are looking really good and you can tell that we're getting closer to the finish line everyday. I feel we're at a point now where we've establish the foundations of our project quite firmly and are now building the functionality required to make it all work. Niall has done a super job in this regard, the front end is looking clean and extra little pop-ups and warnings are giving the front end a nice feel. As for the back end, my two biggest achievements recently have been to encrypt incoming passwords and to set up tokens that hold information to identify who's logged in. Of course, we're not quite over the line and with regards to the back end in particular I suspect that more middleware may need to be added, but at this point in time we're at a very good stage of the project.
+	</p>
 	
 	
 
