--- a/index.html
+++ b/index.html
@@ -96,6 +96,15 @@
 	<p class = "first">
 		With the communications module finishing yesterday, we now properly have the ability to put the foot down and get this project finished. Things are looking really good and you can tell that we're getting closer to the finish line everyday. I feel we're at a point now where we've establish the foundations of our project quite firmly and are now building the functionality required to make it all work. Niall has done a super job in this regard, the front end is looking clean and extra little pop-ups and warnings are giving the front end a nice feel. As for the back end, my two biggest achievements recently have been to encrypt incoming passwords and to set up tokens that hold information to identify who's logged in. Of course, we're not quite over the line and with regards to the back end in particular I suspect that more middleware may need to be added, but at this point in time we're at a very good stage of the project.
 	</p>
+	<hr>
+
+	<h3 class = "date"> |February 23 2021| Conor </h3>
+
+	<h1 class = "title"> Apparently timetables are important? </h1>
+
+	<p class = "first">
+		So up until now we had been slightly ignoring one of the more difficult and important parts of our project, the timetable itself. The timetable is of course quite an essential part of our project as it will be used both for the managers side of things to set the employees shifts and on the employees end to show them their upcomming shifts. Most of the timetable's front end functionality had been sorted out by now, with managers able to drag and drop shifts for their employees where ever they like. Today however was when the start of the backend functionality was built for the timetable. The API is now set up and ready to receive multiple employees shifts from a manager, and similarly is ready to retrieve timetables on a per employee basis.
+	</p>
 	
 	
 
