--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
 	<p class = "first">
 		So up until now we had been slightly ignoring one of the more difficult and important parts of our project, the timetable itself. The timetable is of course quite an essential part of our project as it will be used both for the managers side of things to set the employees shifts and on the employees end to show them their upcomming shifts. Most of the timetable's front end functionality had been sorted out by now, with managers able to drag and drop shifts for their employees where ever they like. Today however was when the start of the backend functionality was built for the timetable. The API is now set up and ready to receive multiple employees shifts from a manager, and similarly is ready to retrieve timetables on a per employee basis.
 	</p>
+	<hr>
+	
+	<h3 class = "date"> |February 24 2021| Niall </h3>
+
+	<h1 class = "title"> Deep Breathes Everyone </h1>
+
+	<p class = "first">
+		What a wild few days! We now have our backend connected to our scheduler component. It was extremely painful to get them to work together but it was so worth it in the end. So now our app is fundementally complete now! So just a small few bugs etc. to clean up and we will be done! Our next step is to start unit testing and all the write ups. Onwards and upwards!
+	</p>
+	<hr>
 	
 	
 
