--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 	<h1 class = "title"> Deep Breathes Everyone </h1>
 
 	<p class = "first">
-		What a wild few days! We now have our backend connected to our scheduler component. It was extremely painful to get them to work together but it was so worth it in the end. So now our app is fundementally complete now! So just a small few bugs etc. to clean up and we will be done! Our next step is to start unit testing and all the write ups. Onwards and upwards!
+		What a wild few days! We now have our backend connected to our scheduler component. It was extremely painful to get them to work together but it was so worth it in the end. So now a manager can create employees, and they will show up in our scheduler. Managers can then dynamically create a timetable with the employees they added to our system. Now our app is fundementally complete! So just a small few bugs etc. to clean up and we will be done! Our next step is to start unit testing and all the write ups. Onwards and upwards!
 	</p>
 	<hr>
 	
