--- a/index.html
+++ b/index.html
@@ -115,6 +115,14 @@
 		What a wild few days! We now have our backend connected to our scheduler component. It was extremely painful to get them to work together but it was so worth it in the end. So now a manager can create employees, and they will show up in our scheduler. Managers can then dynamically create a timetable with the employees they added to our system. Now our app is fundementally complete! So just a small few bugs etc. to clean up and we will be done! Our next step is to start unit testing and all the write ups. Onwards and upwards!
 	</p>
 	<hr>
+	<h3 class = "date"> |February 26 2021| Niall </h3>
+
+	<h1 class = "title"> Let's go team! </h1>
+
+	<p class = "first">
+		 We are very close to the finish line now. Had a small meeting with Donal to explain that we are almost done, just some clean up. Now we need to make sure all our testing is fully done. Then move on to our other deliverables such as user and technical manuels. Feels somewhat weird to be nearly done but very exciting. 
+	</p>
+	<hr>
 	
 	
 
