--- a/index.html
+++ b/index.html
@@ -124,6 +124,14 @@
 	</p>
 	<hr>
 	
+	<h3 class = "date"> |March 03 2021| Niall </h3>
+
+	<h1 class = "title"> README.md </h1>
+
+	<p class = "first">
+		 We are beginning to create and clean up the documentation needed for our project. We have created a user manual alongside a technical manual. We now need to clean up our testing to make it presentable and show that in a markdown format also. Excited to be done this project to be honest.
+	<hr>
+	
 	
 
 
