--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
 		 We are beginning to create and clean up the documentation needed for our project. We have created a user manual alongside a technical manual. We now need to clean up our testing to make it presentable and show that in a markdown format also. Excited to be done this project to be honest.
 	<hr>
 	
+	<h3 class = "date"> |March 09 2021| Niall </h3>
+
+	<h1 class = "title"> The End Approaches </h1>
+
+	<p class = "first">
+ 	We are nearly there now. We have completed a user survey and analysed the results which were overall positive. We then made the necessary changes to try make our app the best it could be and we are quite proud of it. We have completed the user and technical manual which have been uploaded to gitlab. We now just need to finish off our testing and we can call it a day then. 
+	<hr>
+	
 	
 
 
