--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<h1 class = "title"> Let's go team! </h1>
 
 	<p class = "first">
-		 We are very close to the finish line now. Had a small meeting with Donal to explain that we are almost done, just some clean up. Now we need to make sure all our testing is fully done. Then move on to our other deliverables such as user and technical manuels. Feels somewhat weird to be nearly done but very exciting. 
+		 We are very close to the finish line now. Had a small meeting with Donal to explain that we are almost done, just some clean up. Now we need to make sure all our testing is fully done. Then move on to our other deliverables such as user and technical manuals. Feels somewhat weird to be nearly done but very exciting. 
 	</p>
 	<hr>
 	
