--- a/index.html
+++ b/index.html
@@ -139,7 +139,14 @@
 	<p class = "first">
  	We are nearly there now. We have completed a user survey and analysed the results which were overall positive. We then made the necessary changes to try make our app the best it could be and we are quite proud of it. We have completed the user and technical manual which have been uploaded to gitlab. We now just need to finish off our testing and we can call it a day then. 
 	<hr>
-	
+	<h3 class = "date"> |March 12 2021| Conor </h3>
+
+    	<h1 class = "title"> We're done! </h1>
+
+    	<p class = "first">
+        	Well, whether we like it or not the deadline is 5pm today and then we will be officially done! I'm happy to report that we are both very happy with how this project has turned out. Over the last couple of days we have been making minor tweaks to our web app but also spending the majority of our time on our documentation to make sure that it is up to standard. We also had one last meeting with our supervisor who gave us some tips for the video demonstration due today and the presentation that we will have next week There's not much else we can do now other than prepare for the presentation and then cross our fingers till the results come out!
+   	 </p>
+    	<hr>
 	
 
 
